<resources>
    <string name="app_name">WeatherReportApplication</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="weather">WEATHER</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="enter_zipcode">Enter Zipcode</string>
    <string name="measured">Measured:</string>
    <string name="get_weather_info">Get Weather info</string>
    <string name="no_weather_information_available_for_this_zipcode">No Weather information available for this zipCode</string>
</resources>
